--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,15 +6,19 @@ layout: default
 
 <div class="catalogue">
 
+  {% if paginator.posts %}
+  <h1 style="margin: 1em 0 0 0">Últimos conteúdos</h1>
+  {% endif %}
+
   {% for post in paginator.posts %}
   <a href="{{ post.url | prepend: site.baseurl }}" class="catalogue-item">
     <div>
       <time datetime="{{ post.date }}" class="catalogue-time">{{ post.date | localize: "%d/%m/%Y" }}</time>
-      <h1 class="catalogue-title">{{ post.title }}</h1>
+      <h2 class="catalogue-title">{{ post.title }}</h2>
       <div class="catalogue-line"></div>
 
       <p>
-        {{ post.content | strip_html | truncatewords: 30 }}
+        {{ post.content | strip_html | truncatewords: 25 }}
       </p>
 
     </div>
