Novos posts. Novo balao!

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,3 +19,9 @@ h2 {
 .post-title {
     font-size: 3rem;
 }
+
+#balao {
+    display: inline-block;
+    width: 20px;
+    vertical-align: middle;
+}
