--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
   <nav class="nav">
     <div class="nav-container">
       <a href="{{ site.baseurl }}/">
-        <h2 class="nav-title">{{ site.title }}</h2>
+        <h2 class="nav-title">{{ site.title }} <img id="balao" src="{{site.baseurl}}/assets/img/balao.jpg"></h2>
       </a>
       <ul>
         <li><a href="{{ site.baseurl }}/">Inicial</a></li>
