--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 <div class="catalogue">
 
   {% if paginator.posts %}
-  <h1 style="margin: 1em 0 0 0">Últimos conteúdos</h1>
+  <h1 style="margin: 1em 0 0 0">Atualizações</h1>
   {% endif %}
 
   {% for post in paginator.posts %}
